# exam-api

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile
api/server/: prestart.sh  pyproject.toml  run.sh
api/server/app/: backend_pre_start.py  initial_data.py  logging.conf  main.py
api/server/app/core/: config.py  settings.ini
api/server/app/db/: base.py  base_class.py  init_db.py  redis.py  session.py
api/server/app/middleware/: exam_attempt.py
api/server/app/models/: admit_card.py  answer.py  championship.py  exam_attempt.py  examination.py  profile.py  queschoice.py  question.py  question_attempt.py
api/server/app/router/: deps.py
api/server/app/router/admin/: api.py
api/server/app/router/admin/controllers/: admit_card.py  answer.py  championship.py  examination.py  profile.py  queschoice.py  question.py
api/server/app/router/v1/: api.py
api/server/app/router/v1/controllers/: admit_card.py  answer.py  championship.py  examination.py  order.py  profile.py  question.py
api/server/app/router/v2/: api.py
api/server/app/router/v2/controllers/: order.py
api/server/app/schemas/: admit_card.py  answer.py  championship.py  examination.py  order.py  profile.py  queschoice.py  question.py
api/server/app/services/: admit_card.py  answer.py  championship.py  exam_attempt.py  examination.py  main.py  order.py  profile.py  ques_attempt.py  queschoice.py  question.py
api/server/app/services/payments/: cashfree_order.py  razorpay_order.py
api/server/app/utils/: app_exceptions.py  hash.py  jwt.py  request_exceptions.py  service_request.py
(+3 files in other folders)
