[tool.poetry]
name = "studyabacus"
version = "0.1.0"
description = "Package Manger for StudyAbacus"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.3.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
