[tool.poetry]
name = "studyabacus"
version = "0.1.0"
description = "Package Manger for StudyAbacus"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
redis = "^5.0.6"
requests = "^2.32.3"
python-jose = "^3.3.0"
gunicorn = "^22.0.0"
cashfree-pg = "^4.1.3"
configparser = "^7.0.0"
python-dotenv = "^1.0.1"
phonenumbers = "^8.13.39"
shortuuid = "^1.0.13"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
